fix scroll margin so section header is visible on reference link

--- a/doc/htmldoc/static/css/custom.css
+++ b/doc/htmldoc/static/css/custom.css
@@ -179,13 +179,11 @@ figure.align-default {
 .md-typeset h6 {
    font-weight: 600;
 }
-.md-typeset h1[id]:before,
-.md-typeset h2[id]:before,
-.md-typeset h3[id]:before,
-.md-typeset h4[id]:before {
-   margin-top: -3.4rem;
-  padding-top: 3.4rem;
+
+[id] {
+  scroll-margin-top: 4rem;
 }
+
 
 [data-md-color-primary=orange] .md-tabs {
   background-color: var(--nest-orange);
